2015-03-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-macs.el (cl--transform-lambda): Rework to avoid
	cl--do-arglist in more cases; add comments to explain what's going on.
	(cl--do-&aux): New function extracted from cl--do-arglist.
	(cl--do-arglist): Use it.

	* emacs-lisp/cl-generic.el: Add Version: header, for ELPA purposes.

	* obsolete/iswitchb.el (iswitchb-read-buffer): Add `predicate' arg.
	* isearchb.el (isearchb-iswitchb): Adjust accordingly.
	* ido.el (ido-read-buffer): Add `predicate' argument.
	* misearch.el (unload-function-defs-list): Declare before use.

2015-03-16  Vibhav Pant  <vibhavp@gmail.com>

	* net/browse-url.el (browse-url-browser-function): Add "Conkeror".
	(browse-url-conkeror-program, browse-url-conkeror-arguments)
	(browse-url-conkeror-new-window-is-buffer): New defcustoms.
	(browse-url-default-browser): Check for `browse-url-conkeror'
	and call `browse-url-conkeror-program'.
	(browse-url-conkeror): New command.
	(bug#19863)

2015-03-16  Vibhav Pant  <vibhavp@gmail.com>

	* eshell/esh-mode.el (eshell/clear): New function.

2015-03-16  Alan Mackenzie  <acm@muc.de>

	Make Edebug work with Follow Mode.

	* emacs-lisp/edebug.el (edebug--display-1): Remove call to
	edebug-adjust-window.
	(edebug--recursive-edit): Don't bind pre/post-command-hooks to nil
	over the recursive edit.
	(edebug-adjust-window): Remove.

2015-03-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-adb.el:
	* net/tramp-gvfs.el:
	* net/tramp-sh.el:
	* net/tramp-smb.el: Set tramp-autoload cookie for all defcustoms.

	* net/tramp.el (tramp-ssh-controlmaster-options)
	(tramp-use-ssh-controlmaster-options): Move them to tramp-sh.el.
	(tramp-default-method): Do not check for
	`tramp-ssh-controlmaster-options'.

	* net/tramp-sh.el (tramp-use-ssh-controlmaster-options):
	New defcustom, moved from tramp.el.
	(tramp-ssh-controlmaster-options): New defvar, moved from tramp.el
	but with a nil initial value.
	(tramp-ssh-controlmaster-options): New defun.